# FireworksEditor

./: CMakeLists.txt  LICENCE.md  README.md  fire_works.sln
fire_works/: fire_works.vcxproj  fire_works.vcxproj.filters  fireworks.cpp  fireworks.h  gui.cpp  gui.h  main.cpp  number_generator.h
include/: fireworks.h  gui.h
src/: main.cpp
src/Graphics/: fireworks.cpp  gui.cpp
